Fix overflow on route-name, reapply css lost in merge

--- a/src/components/departureTiles/styles.scss
+++ b/src/components/departureTiles/styles.scss
@@ -73,6 +73,13 @@
     width: 33%;
 }
 
+.route-name-text{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    width: 85%;
+}
+
 @media only screen
   and (min-device-width: 768px)
   and (max-device-width: 1024px)
